samples/_failures_safe/1761551299_3aa625_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_754ac4d7.c: In function ‘main’:
./samples/SAFE/__tmp_754ac4d7.c:201:9: error: expected declaration or statement at end of input
  201 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_754ac4d7.c:201:9: error: expected declaration or statement at end of input
